--- a/index.html
+++ b/index.html
@@ -10,19 +10,48 @@
     <div class="container">
         <div class="sidebar">
             <div class="sidebar-header">
-                
+                <img src="./assets/icons/data-matrix.svg" alt="logo of dashboard">
                 <div class="sidebar-header-text">Dashboard</div>
             </div>
-            <ul style="sidebar-items-container">
-                <li class="sidebar-items"></li>
-                <li class="sidebar-items"></li>
-                <li class="sidebar-items"></li>
-                <li class="sidebar-items"></li>
-                <li class="sidebar-items"></li>
-                <li class="sidebar-items"></li>
-                <li class="sidebar-items"></li>
-                <li class="sidebar-items"></li>
-                <li class="sidebar-items"></li>
+            <ul class="sidebar-items-container">
+                <li class="sidebar-items">
+                    <img src="./assets/icons/home.svg" alt="home icon">
+                    <div>Home</div>
+                </li>
+                <li class="sidebar-items">
+                    <img src="./assets/icons/card-account-details-outline.svg" alt="profile icon">
+                    <div>Profile</div>
+                </li>
+                <li class="sidebar-items">
+                    <img src="./assets/icons/message-reply.svg" alt="message icon">
+                    <div>Messages</div>
+                </li>
+                <li class="sidebar-items">
+                    <img src="./assets/icons/history.svg" alt="history icon">
+                    <div>History</div>
+                </li>
+                <li class="sidebar-items">
+                    <img src="./assets/icons/calendar-check.svg" alt="tasks icon">
+                    <div>Tasks</div>
+                </li>
+                <li class="sidebar-items">
+                    <img src="./assets/icons/account-group.svg" alt="communities icon">
+                    <div>Communities</div>
+                </li>
+            </ul>
+            <ul class="sidebar-items-container">
+                <li class="sidebar-items">
+                    <img src="./assets/icons/cog.svg" alt="settings icon">
+                    <div>Settings</div>
+                </li>
+                <li class="sidebar-items">
+                    <img src="./assets/icons/help-box.svg" alt="support icon">
+                    <div>Support</div>
+                </li>
+                <li class="sidebar-items">
+                    <img src="./assets/icons/shield-check.svg" alt="privacy icon">
+                    <div>Privacy</div>
+                </li>
             </ul>
         </div>
         <div class="main-header">
