--- a/index.html
+++ b/index.html
@@ -56,9 +56,27 @@
         </div>
         <div class="main-header">
             <div class="main-header-top">
-
+                <div class="search-box">
+                    <img src="./assets/icons/magnify.svg" alt="search icon">
+                    <input type="text">
+                </div>
+                <div class="notifications">
+                    <img src="./assets/icons/bell-ring.svg" alt="notification bell">
+                    <img src="./assets/images/8e81a2dea4ee87cfccf724570f1772ed.jpg" alt="profile picture">
+                    <div class="account-name">Morgan Oakley</div>
+                </div>
             </div>
             <div class="main-header-bottom">
+                <img src="./assets/images/8e81a2dea4ee87cfccf724570f1772ed.jpg" alt="profile picture">
+                <div class="greeting-message">
+                    <div class="greet">Hello there,</div>
+                    <div class="name-profile">Morgan Oakley (@morgan)</div>
+                </div>
+                <div class="buttons-container">
+                    <button class="function-buttons">New</button>
+                    <button class="function-buttons">Upload</button>
+                    <button class="function-buttons">Share</button>
+                </div>
                 
             </div>
         </div>
