Complete final main content

--- a/index.html
+++ b/index.html
@@ -82,14 +82,171 @@
         </div>
         <div class="main-section">
             <div class="cards-container">
-
+                <div class="cards-title">Your projects</div>
+                <div class="cards-wrapper">
+                    <div class="card">
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quo architecto qui non, laborum aliquid autem sit expedita doloribus aspernatur, inventore id. Non, dolor doloremque reprehenderit ipsa adipisci itaque tenetur!</p>
+                        <div class="actions-icons">
+                            <img src="./assets/icons/star-plus-outline.svg" alt="star icon">
+                            <img src="./assets/icons/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./assets/icons/source-fork.svg" alt="fork-icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quo architecto qui non, laborum aliquid autem sit expedita doloribus aspernatur, inventore id. Non, dolor doloremque reprehenderit ipsa adipisci itaque tenetur!</p>
+                        <div class="actions-icons">
+                            <img src="./assets/icons/star-plus-outline.svg" alt="star icon">
+                            <img src="./assets/icons/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./assets/icons/source-fork.svg" alt="fork-icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quo architecto qui non, laborum aliquid autem sit expedita doloribus aspernatur, inventore id. Non, dolor doloremque reprehenderit ipsa adipisci itaque tenetur!</p>
+                        <div class="actions-icons">
+                            <img src="./assets/icons/star-plus-outline.svg" alt="star icon">
+                            <img src="./assets/icons/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./assets/icons/source-fork.svg" alt="fork-icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quo architecto qui non, laborum aliquid autem sit expedita doloribus aspernatur, inventore id. Non, dolor doloremque reprehenderit ipsa adipisci itaque tenetur!</p>
+                        <div class="actions-icons">
+                            <img src="./assets/icons/star-plus-outline.svg" alt="star icon">
+                            <img src="./assets/icons/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./assets/icons/source-fork.svg" alt="fork-icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quo architecto qui non, laborum aliquid autem sit expedita doloribus aspernatur, inventore id. Non, dolor doloremque reprehenderit ipsa adipisci itaque tenetur!</p>
+                        <div class="actions-icons">
+                            <img src="./assets/icons/star-plus-outline.svg" alt="star icon">
+                            <img src="./assets/icons/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./assets/icons/source-fork.svg" alt="fork-icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quo architecto qui non, laborum aliquid autem sit expedita doloribus aspernatur, inventore id. Non, dolor doloremque reprehenderit ipsa adipisci itaque tenetur!</p>
+                        <div class="actions-icons">
+                            <img src="./assets/icons/star-plus-outline.svg" alt="star icon">
+                            <img src="./assets/icons/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./assets/icons/source-fork.svg" alt="fork-icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quo architecto qui non, laborum aliquid autem sit expedita doloribus aspernatur, inventore id. Non, dolor doloremque reprehenderit ipsa adipisci itaque tenetur!</p>
+                        <div class="actions-icons">
+                            <img src="./assets/icons/star-plus-outline.svg" alt="star icon">
+                            <img src="./assets/icons/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./assets/icons/source-fork.svg" alt="fork-icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quo architecto qui non, laborum aliquid autem sit expedita doloribus aspernatur, inventore id. Non, dolor doloremque reprehenderit ipsa adipisci itaque tenetur!</p>
+                        <div class="actions-icons">
+                            <img src="./assets/icons/star-plus-outline.svg" alt="star icon">
+                            <img src="./assets/icons/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./assets/icons/source-fork.svg" alt="fork-icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quo architecto qui non, laborum aliquid autem sit expedita doloribus aspernatur, inventore id. Non, dolor doloremque reprehenderit ipsa adipisci itaque tenetur!</p>
+                        <div class="actions-icons">
+                            <img src="./assets/icons/star-plus-outline.svg" alt="star icon">
+                            <img src="./assets/icons/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./assets/icons/source-fork.svg" alt="fork-icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quo architecto qui non, laborum aliquid autem sit expedita doloribus aspernatur, inventore id. Non, dolor doloremque reprehenderit ipsa adipisci itaque tenetur!</p>
+                        <div class="actions-icons">
+                            <img src="./assets/icons/star-plus-outline.svg" alt="star icon">
+                            <img src="./assets/icons/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./assets/icons/source-fork.svg" alt="fork-icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quo architecto qui non, laborum aliquid autem sit expedita doloribus aspernatur, inventore id. Non, dolor doloremque reprehenderit ipsa adipisci itaque tenetur!</p>
+                        <div class="actions-icons">
+                            <img src="./assets/icons/star-plus-outline.svg" alt="star icon">
+                            <img src="./assets/icons/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./assets/icons/source-fork.svg" alt="fork-icon">
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3>Super Cool Project</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis quo architecto qui non, laborum aliquid autem sit expedita doloribus aspernatur, inventore id. Non, dolor doloremque reprehenderit ipsa adipisci itaque tenetur!</p>
+                        <div class="actions-icons">
+                            <img src="./assets/icons/star-plus-outline.svg" alt="star icon">
+                            <img src="./assets/icons/eye-plus-outline.svg" alt="eye icon">
+                            <img src="./assets/icons/source-fork.svg" alt="fork-icon">
+                        </div>
+                    </div>
+                </div>
             </div>
             <div class="main-aside">
                 <div class="announcements">
-
+                    <div class="cards-title">Announcements</div>
+                    <div class="announcements-card">
+                        <div class="announcements-content">
+                            <div class="announcements-title">Site Maintenance</div>
+                            <p class="announcements-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus in odit ab omnis facere natus reprehenderit reiciendis debitis.</p>
+                        </div>
+                        <hr>
+                        <div class="announcements-content">
+                            <div class="announcements-title">Site Maintenance</div>
+                            <p class="announcements-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus in odit ab omnis facere natus reprehenderit reiciendis debitis.</p>
+                        </div>
+                        <hr>
+                        <div class="announcements-content">
+                            <div class="announcements-title">Site Maintenance</div>
+                        <p class="announcements-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus in odit ab omnis facere natus reprehenderit reiciendis debitis.</p>
+                    </div>
+                    </div>
                 </div>
                 <div class="trending">
-
+                    <div class="cards-title">Trending</div>
+                    <div class="trending-wrapper">
+                        <div class="trending-items">
+                            <img src="./assets/images/8e81a2dea4ee87cfccf724570f1772ed.jpg" alt="profile picture">
+                            <div class="trending-items-text">
+                                <div class="trending-people">@mike</div>
+                                <div class="project-name">Super Cool project</div>
+                            </div>
+                        </div>
+                        <div class="trending-items">
+                            <img src="./assets/images/image.png" alt="profile picture">
+                            <div class="trending-items-text">
+                                <div class="trending-people">@sera</div>
+                                <div class="project-name">Super Cool project</div>
+                            </div>
+                        </div>
+                        <div class="trending-items">
+                            <img src="./assets/images/i9mg.png" alt="profile picture">
+                            <div class="trending-items-text">
+                                <div class="trending-people">@eva</div>
+                                <div class="project-name">Super Cool project</div>
+                            </div>
+                        </div>
+                        <div class="trending-items">
+                            <img src="./assets/images/75027.jpg" alt="profile picture">
+                            <div class="trending-items-text">
+                                <div class="trending-people">@nerv</div>
+                                <div class="project-name">Super Cool project</div>
+                            </div>
+                        </div>
+                        
+                    </div>
                 </div>
             </div>
         </div>
